git add endpoint to publish articles
